--- a/js/package.json
+++ b/js/package.json
@@ -1,13 +1,16 @@
 {
-    "name": "nexus-proxy-test",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+    "name": "nexus_proxy_test",
+    "version": "0.1.0",
+    "private": true,
+    "devDependencies": {
+        "@bazel/bazelisk": "latest",
+        "@bazel/buildifier": "latest",
+        "@bazel/ibazel": "latest"
     },
-    "author": "",
-    "license": "ISC",
+    "scripts": {
+        "build": "bazel build //...",
+        "test": "bazel test //..."
+    },
     "dependencies": {
         "lodash": "^4.17.20",
         "winston": "^3.3.3"
